2010-06-03  Juri Linkov  <juri@jurta.org>

	* buffer.c (Fother_buffer): Add CHECK_FRAME.
	(Fswitch_to_buffer): Remove unused variable `err'.

2010-06-03  Glenn Morris  <rgm@gnu.org>

	* m/template.h (NO_SOCK_SIGIO): Remove, no longer used.

	* m/hp800.h (alloca) [__NetBSD__ && __GNUC__]: No need to define it,
	now that AH_BOTTOM does it.

	* m/hp800.h (HAVE_ALLOCA):
	* m/ibms390x.h (HAVE_ALLOCA): Do not define, no longer needed.

	* m/ia64.h, s/gnu-linux.h, s/gnu.h, s/netbsd.h, s/usg5-4.h:
	Remove NOT_C_CODE tests, it is always true now.

2010-06-02  Dan Nicolaescu  <dann@ics.uci.edu>

	Fix config.h includes.
	* xsettings.c:
	* xgselect.c:
	* nsterm.m:
	* nsselect.m:
	* nsimage.m:
	* nsfont.m:
	* nsfns.m:
	* dbusbind.c: Use #include <config.h> instead of "config.h" as all
	other files do.

	* gmalloc.c: Remove BROKEN_PROTOTYPES reference, unused.

	* s/sol2-6.h: Remove obsolete comments.

	Remove unnecessary alloca.h includes.
	* keymap.c: Do not include alloca.h, config.h does that.
	* sysdep.c: Likewise.  Do not define fwrite, not used.

2010-06-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sysdep.c (child_setup_tty): Move the non-canonical initialization to
	the HAVE_TERMIO where it belongs (bug#6149).

2010-05-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keymap.c (Fwhere_is_internal): Fix handling of remapping (in thread
	of bug#6305).

2010-05-30  Eli Zaretskii  <eliz@gnu.org>

	* bidi.c (bidi_move_to_visually_next): Make sure the sentinel
	state is always cached (bug#6306).

2010-05-29  Eli Zaretskii  <eliz@gnu.org>

	Fix cursor motion in bidi-reordered continued lines.
	* xdisp.c (try_cursor_movement): Backup to non-continuation line
	only after finding point's row.  Fix the logic.  Rewrite the loop
	over continuation lines in bidi-reordered buffers.  Return
	CURSOR_MOVEMENT_MUST_SCROLL upon failure to find a suitable row,
	rather than CURSOR_MOVEMENT_CANNOT_BE_USED.

2010-05-28  Michael Albinus  <michael.albinus@gmx.de>
